fixed sliders width issue

--- a/index.html
+++ b/index.html
@@ -492,17 +492,37 @@
               </div>
               <div>
                 <div class="slider-nav sliderNavOptions">
-                  <div class="slider_nav_pic">
-                    <img src="./images/slidenavItem1.png" alt="slidenavItem1" />
+                  <div>
+                    <div class="slider_nav_pic">
+                      <img
+                        src="./images/slidenavItem1.png"
+                        alt="slidenavItem1"
+                      />
+                    </div>
                   </div>
-                  <div class="slider_nav_pic">
-                    <img src="./images/slidenavItem2.png" alt="slidenavItem2" />
+                  <div>
+                    <div class="slider_nav_pic">
+                      <img
+                        src="./images/slidenavItem2.png"
+                        alt="slidenavItem2"
+                      />
+                    </div>
                   </div>
-                  <div class="slider_nav_pic">
-                    <img src="./images/slidenavItem3.png" alt="slidenavItem3" />
+                  <div>
+                    <div class="slider_nav_pic">
+                      <img
+                        src="./images/slidenavItem3.png"
+                        alt="slidenavItem3"
+                      />
+                    </div>
                   </div>
-                  <div class="slider_nav_pic">
-                    <img src="./images/slidenavItem4.png" alt="slidenavItem4" />
+                  <div>
+                    <div class="slider_nav_pic">
+                      <img
+                        src="./images/slidenavItem4.png"
+                        alt="slidenavItem4"
+                      />
+                    </div>
                   </div>
                 </div>
               </div>
@@ -527,129 +547,151 @@
           <div class="col-lg-12">
             <div class="card_img_div">
               <div class="center">
-                <div class="Testimonials_card_img">
-                  <div class="card_top">
-                    <div class="star_div">
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                <div>
+                  <div class="Testimonials_card_img">
+                    <div class="card_top">
+                      <div class="star_div">
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
                       </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
+                      <p>
+                        On the other hand, we denounce with righteous
+                        indignation and dislike men who are so beguiled and
+                        demoralized by the charms of pleasure.
+                      </p>
                     </div>
-                    <p>
-                      On the other hand, we denounce with righteous indignation
-                      and dislike men who are so beguiled and demoralized by the
-                      charms of pleasure.
-                    </p>
-                  </div>
-                  <div class="cardBot">
-                    <div class="profilePic">
-                      <img src="./images/sliderp1.png" alt="" />
-                    </div>
-                    <div class="name">
-                      <h2>Serhiy Hipskyy</h2>
-                      <p>CEO Universal</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="Testimonials_card_img">
-                  <div class="card_top">
-                    <div class="star_div">
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                    <div class="cardBot">
+                      <div class="profilePic">
+                        <img src="./images/sliderp1.png" alt="" />
                       </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                      <div class="name">
+                        <h2>Serhiy Hipskyy</h2>
+                        <p>CEO Universal</p>
                       </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                    </div>
-                    <p>
-                      Nam libero tempore, cum soluta nobis est eligendi optio
-                      cumque nihil impedit quo minus id quod maxime placeat
-                      facere possimus.
-                    </p>
-                  </div>
-                  <div class="cardBot">
-                    <div class="profilePic">
-                      <img src="./images/sliderp2.png" alt="" />
-                    </div>
-                    <div class="name">
-                      <h2>Serhiy Hipskyy</h2>
-                      <p>CEO Universal</p>
                     </div>
                   </div>
                 </div>
-                <div class="Testimonials_card_img">
-                  <div class="card_top">
-                    <div class="stars">
-                      <img src="./images/Shape.png" alt="starts" />
+                <div>
+                  <div class="Testimonials_card_img">
+                    <div class="card_top">
+                      <div class="star_div">
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                      </div>
+                      <p>
+                        Nam libero tempore, cum soluta nobis est eligendi optio
+                        cumque nihil impedit quo minus id quod maxime placeat
+                        facere possimus.
+                      </p>
                     </div>
-                    <p>
-                      On the other hand, we denounce with righteous indignation
-                      and dislike men who are so beguiled and demoralized by the
-                      charms of pleasure.
-                    </p>
-                  </div>
-                  <div class="cardBot">
-                    <div class="profilePic">
-                      <img src="./images/sliderp3.png" alt="" />
-                    </div>
-                    <div class="name">
-                      <h2>Serhiy Hipskyy</h2>
-                      <p>CEO Universal</p>
+                    <div class="cardBot">
+                      <div class="profilePic">
+                        <img src="./images/sliderp2.png" alt="" />
+                      </div>
+                      <div class="name">
+                        <h2>Serhiy Hipskyy</h2>
+                        <p>CEO Universal</p>
+                      </div>
                     </div>
                   </div>
                 </div>
-                <div class="Testimonials_card_img">
-                  <div class="card_top">
-                    <div class="star_div">
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                <div>
+                  <div class="Testimonials_card_img">
+                    <div class="card_top">
+                      <div class="star_div">
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
                       </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                      <p>
+                        On the other hand, we denounce with righteous
+                        indignation and dislike men who are so beguiled and
+                        demoralized by the charms of pleasure.
+                      </p>
+                    </div>
+                    <div class="cardBot">
+                      <div class="profilePic">
+                        <img src="./images/sliderp3.png" alt="" />
                       </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
-                      </div>
-                      <div class="star">
-                        <img src="./images/Star5.png" alt="star" />
+                      <div class="name">
+                        <h2>Serhiy Hipskyy</h2>
+                        <p>CEO Universal</p>
                       </div>
                     </div>
-                    <p>
-                      At vero eos et accusamus et iusto odio dignissimos ducimus
-                      qui blanditiis praesentium voluptatum deleniti atque
-                      corrupti quos dolores.
-                    </p>
                   </div>
-                  <div class="cardBot">
-                    <div class="profilePic">
-                      <img src="./images/sliderp3.png" alt="" />
+                </div>
+                <div>
+                  <div class="Testimonials_card_img">
+                    <div class="card_top">
+                      <div class="star_div">
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                        <div class="star">
+                          <img src="./images/Star5.png" alt="star" />
+                        </div>
+                      </div>
+                      <p>
+                        At vero eos et accusamus et iusto odio dignissimos
+                        ducimus qui blanditiis praesentium voluptatum deleniti
+                        atque corrupti quos dolores.
+                      </p>
                     </div>
-                    <div class="name">
-                      <h2>Serhiy Hipskyy</h2>
-                      <p>CEO Universal</p>
+                    <div class="cardBot">
+                      <div class="profilePic">
+                        <img src="./images/sliderp3.png" alt="" />
+                      </div>
+                      <div class="name">
+                        <h2>Serhiy Hipskyy</h2>
+                        <p>CEO Universal</p>
+                      </div>
                     </div>
                   </div>
                 </div>
