--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- ............custom css.........  -->
     <link rel="stylesheet" href="./css/all.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg main_nav">
@@ -38,7 +39,8 @@
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
-          <span class="navbar-toggler-icon"></span>
+          <!-- <span class="navbar-toggler-icon"></span> -->
+          <i class="fa-solid fa-boxes-stacked"></i>
         </button>
         <div
           class="collapse navbar-collapse nav_menus"
