project completed with responsive

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./css/responsive.css" />
   </head>
   <body>
+    <!-- ................navbar starting.......... -->
     <nav class="navbar navbar-expand-lg main_nav">
       <div class="container">
         <a class="navbar-brand logo_img" href="#"
@@ -70,6 +71,8 @@
         </div>
       </div>
     </nav>
+    <!-- ................navbar ending.......... -->
+
     <!-- ..........banner part start...........  -->
     <section id="banner">
       <div class="container">
@@ -109,17 +112,20 @@
       >
         <img src="./images/banner_image.png" alt="banerBG" />
       </div>
+      <div class="xm_banner_image">
+        <img src="./images/banner_image.png" alt="banerBG" />
+      </div>
     </section>
     <!-- ..........banner part end...........  -->
 
     <!-- ...............counter part start..........  -->
     <section id="counter">
       <div class="container">
-        <div class="row">
+        <div class="row counter_items">
           <div class="col-lg-2">
             <div
               data-aos-duration="200"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="counter_single_box"
             >
               <h3><span class="counter">105</span>lbs</h3>
@@ -129,7 +135,7 @@
           <div class="col-lg-2">
             <div
               data-aos-duration="600"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="counter_single_box"
             >
               <h3><span class="counter">26</span>mph</h3>
@@ -139,7 +145,7 @@
           <div class="col-lg-2">
             <div
               data-aos-duration="1000"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="counter_single_box"
             >
               <h3><span class="counter">38</span>miles</h3>
@@ -149,7 +155,7 @@
           <div class="col-lg-2">
             <div
               data-aos-duration="1500"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="counter_single_box"
             >
               <h3><span class="counter">89</span>nm</h3>
@@ -159,7 +165,7 @@
           <div class="col-lg-2">
             <div
               data-aos-duration="2000"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="counter_single_box"
             >
               <h3>
@@ -172,7 +178,7 @@
           <div class="col-lg-2">
             <div
               data-aos-duration="2500"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-up"
               class="last_box"
             >
               <h3>
@@ -308,19 +314,19 @@
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Color : Black</h4>
                 </div>
                 <div class="Golf_bag_details">
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Capacity : 45lbs</h4>
                 </div>
                 <div class="Golf_bag_details">
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Ease : Steady & adjustable</h4>
                 </div>
               </div>
             </div>
@@ -387,19 +393,19 @@
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Color : Black</h4>
                 </div>
                 <div class="Golf_bag_details">
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Capacity : 45lbs</h4>
                 </div>
                 <div class="Golf_bag_details">
                   <div class="tik">
                     <img src="./images/Icon.png" alt="tik_Icon" />
                   </div>
-                  <h4 class="points">Material : Aluminium alloy</h4>
+                  <h4 class="points">Ease : Quick & adjustable</h4>
                 </div>
               </div>
             </div>
@@ -446,14 +452,14 @@
           <div class="col-lg-6">
             <div
               data-aos-duration="1700"
-              data-aos="zoom-in-left"
+              data-aos="zoom-in-down"
               class="build_qualityImg"
             >
               <img src="./images/buildQuality.png" alt="build-quality" />
             </div>
             <div
               data-aos-duration="1700"
-              data-aos="zoom-out-up"
+              data-aos="zoom-in-up"
               class="scooter_partImg"
             >
               <img src="./images/scooterPart.png" alt="scooter_part" />
@@ -494,7 +500,7 @@
               </div>
               <div>
                 <div class="slider-nav sliderNavOptions">
-                  <div>
+                  <div class="navOptionsDiv">
                     <div class="slider_nav_pic">
                       <img
                         src="./images/slidenavItem1.png"
@@ -502,7 +508,7 @@
                       />
                     </div>
                   </div>
-                  <div>
+                  <div class="navOptionsDiv">
                     <div class="slider_nav_pic">
                       <img
                         src="./images/slidenavItem2.png"
@@ -510,7 +516,7 @@
                       />
                     </div>
                   </div>
-                  <div>
+                  <div class="navOptionsDiv">
                     <div class="slider_nav_pic">
                       <img
                         src="./images/slidenavItem3.png"
@@ -518,7 +524,7 @@
                       />
                     </div>
                   </div>
-                  <div>
+                  <div class="navOptionsDiv">
                     <div class="slider_nav_pic">
                       <img
                         src="./images/slidenavItem4.png"
@@ -788,6 +794,7 @@
     <!-- ...............Footer part end............ -->
 
     <!-- ............... script part start.......... -->
+    <!-- .......jquery version-1.12.4.........  -->
     <script
       src="https://code.jquery.com/jquery-1.12.4.min.js"
       integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ="
